--- a/blocks/button-vacancies/button-vacancies.css
+++ b/blocks/button-vacancies/button-vacancies.css
@@ -1,4 +1,4 @@
-.button-vacations {
+.button-vacancies {
     width: 206px;
     height: 48px;
     padding: 14px 20px;
@@ -15,7 +15,7 @@
 }
 
 @media  screen and (max-width: 1279px) {
-    .button-vacations {
+    .button-vacancies {
         display: none;
     }
 }
