--- a/blocks/supplementary-services/supplementary-services.css
+++ b/blocks/supplementary-services/supplementary-services.css
@@ -1,4 +1,5 @@
 .supplementary-services {
     width: 100%;
     background-color: #E6E8EF;
+    font-family: 'Inter', 'Gotham', 'Gotham XNarrow', sans-serif;
 }
