feat: add sections tracking-systems and equipment

--- a/blocks/equipment/equipment.css
+++ b/blocks/equipment/equipment.css
@@ -1,4 +1,4 @@
-.supplementary-cards {
+.equipment {
     padding: 0 30px;
     max-width: 1440px;
     font-family: 'Inter', 'Gotham', 'Gotham XNarrow', sans-serif;
