feat: add also section

--- a/blocks/game-dev/__card-subtitle/game-dev__card-subtitle.css
+++ b/blocks/game-dev/__card-subtitle/game-dev__card-subtitle.css
@@ -1,7 +1,7 @@
 .game-dev__card-subtitle {
     margin: 0;
     padding: 0 40px 31px;
-    font-family: 'Arial';
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
