feat: add adaptive version of page

--- a/blocks/also/__card-container/also__card-container.css
+++ b/blocks/also/__card-container/also__card-container.css
@@ -1,3 +1,10 @@
 .also__card-container {
     display: grid;
 }
+
+@media screen and (max-width: 1439px) {
+    .also__card-container {
+        row-gap: 64px;
+        justify-items: center;
+    }
+}
