--- a/blocks/equipment/__card-description/equipment__card-description.css
+++ b/blocks/equipment/__card-description/equipment__card-description.css
@@ -1,3 +1,9 @@
 .equipment__card-description {
     max-width: 360px;
 }
+
+@media screen and (max-width: 1023px) {
+    .equipment__card-description {
+        max-width: 100%;
+    }
+}
