--- a/blocks/game-dev/game-dev.css
+++ b/blocks/game-dev/game-dev.css
@@ -3,3 +3,10 @@
     max-width: 1440px;
     font-family: 'Inter', 'Gotham', 'Gotham XNarrow', sans-serif;
 }
+
+@media screen and (max-width: 767px) {
+    .game-dev {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
