--- a/blocks/offer/__tel/offer__tel.css
+++ b/blocks/offer/__tel/offer__tel.css
@@ -9,3 +9,10 @@
     color: #DDDDE2;
     text-decoration: none;
 }
+
+@media screen and (max-width: 767px) {
+    .offer__tel {
+        font-size: 14px;
+        line-height: 1.43;
+    }
+}
