--- a/blocks/button-vroom/button-vroom.css
+++ b/blocks/button-vroom/button-vroom.css
@@ -1,6 +1,4 @@
 .button-vroom {
-    margin-top: 46px;
-    margin-bottom: 71px;
     margin: 64px 0 180px;
     width: 170px;
     height: 48px;
@@ -17,8 +15,15 @@
     cursor: pointer;
 }
 
+@media screen and (max-width: 1279px) {
+    .button-vroom {
+        margin-bottom: 120px;
+    }
+}
+
 @media screen and (max-width: 1023px) {
     .button-vroom {
+        margin-bottom: 80px;
         width: 150px;
         font-size: 12px;
         line-height: 1.2;
@@ -27,7 +32,8 @@
 
 @media screen and (max-width: 767px) {
     .button-vroom {
-        width: 343px;
+        margin: 30px 0 64px;
+        width: 100%;
         padding: 16px 34px;
         border-radius: 8px;
         font-size: 14px;
