--- a/blocks/equipment/__card-container/equipment__card-container.css
+++ b/blocks/equipment/__card-container/equipment__card-container.css
@@ -4,3 +4,17 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 40px;
 }
+
+@media screen and (max-width: 1439px) {
+    .equipment__card-container {
+        padding-bottom: 0;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .equipment__card-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 64px;
+        justify-items: center;
+    }
+}
