--- a/blocks/equipment/__card/equipment__card.css
+++ b/blocks/equipment/__card/equipment__card.css
@@ -1,4 +1,6 @@
 .equipment__card {
     max-width: 700px;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
