--- a/blocks/game-dev/__card-container/game-dev__card-container.css
+++ b/blocks/game-dev/__card-container/game-dev__card-container.css
@@ -5,3 +5,18 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 40px;
 }
+
+@media screen and (max-width: 1279px) {
+    .game-dev__card-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 64px;
+        justify-items: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .game-dev__card-container {
+        padding-top: 0;
+        gap: 40px;
+    }
+}
