--- a/blocks/game-dev/__card-subtitle/game-dev__card-subtitle.css
+++ b/blocks/game-dev/__card-subtitle/game-dev__card-subtitle.css
@@ -7,3 +7,11 @@
     font-size: 16px;
     line-height: 1.38;
 }
+
+@media screen and (max-width: 767px) {
+    .game-dev__card-subtitle {
+        padding: 0 16px 18px;
+        font-size: 12px;
+        line-height: 1.33;
+    }
+}
