--- a/blocks/game-dev/__description/game-dev__description.css
+++ b/blocks/game-dev/__description/game-dev__description.css
@@ -3,3 +3,20 @@
     padding: 0;
     max-width: 670px;
 }
+
+@media screen and (max-width: 1279px) {
+    .game-dev__description {
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .game-dev__description {
+        margin-left: 0;
+        align-items: left;
+        text-align: left;
+    }
+}
