--- a/blocks/offer/__content/offer__content.css
+++ b/blocks/offer/__content/offer__content.css
@@ -12,12 +12,14 @@
 
 @media screen and (max-width: 1279px) {
     .offer__content {
+        padding-top: 150px;
         margin-left: 100px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .offer__content {
+        padding-top: 100px;
         margin-top: 100px;
         margin-left: 50px;
     }
@@ -26,7 +28,7 @@
 @media screen and (max-width: 767px) {
     .offer__content {
         max-width: 550px;
-        padding-right: 16px;
+        padding: 150px 16px 0;
         margin: 80px auto 0;
         font-size: 20px;
         line-height: 24px;
