--- a/blocks/office/__subtitle/office__subtitle.css
+++ b/blocks/office/__subtitle/office__subtitle.css
@@ -7,3 +7,10 @@
     font-size: 20px;
     line-height: 1.4;
 }
+
+@media screen and (max-width: 767px) {
+    .office__subtitle {
+        font-size: 14px;
+        line-height: 1.43;
+    }
+}
