--- a/blocks/supplementary-cards/__card-img-wrapper/supplementary-cards__card-img-wrapper.css
+++ b/blocks/supplementary-cards/__card-img-wrapper/supplementary-cards__card-img-wrapper.css
@@ -5,3 +5,9 @@
     align-items: center;
     justify-content: center;
 }
+
+@media screen and (max-width: 767px) {
+    .supplementary-cards__card-img-wrapper {
+        background: transparent;
+    }
+}
