--- a/blocks/tracking-systems/__card-text/tracking-systems__card-text.css
+++ b/blocks/tracking-systems/__card-text/tracking-systems__card-text.css
@@ -8,3 +8,16 @@
     line-height: 1.38;
     color: #75788D;
 }
+
+@media screen and (max-width: 1023px) {
+    .tracking-systems__card-text {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .tracking-systems__card-text {
+        font-size: 12px;
+        line-height: 1.33;
+    }
+}
