--- a/blocks/tracking-systems/__card/tracking-systems__card.css
+++ b/blocks/tracking-systems/__card/tracking-systems__card.css
@@ -1,3 +1,11 @@
 .tracking-systems__card {
     max-width: 280px;
 }
+
+@media screen and (max-width: 1023px) {
+    .tracking-systems__card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
