--- a/blocks/tracking-systems/__cards/tracking-systems__cards.css
+++ b/blocks/tracking-systems/__cards/tracking-systems__cards.css
@@ -6,3 +6,13 @@
     justify-content: space-between;
     list-style: none;
 }
+
+@media screen and (max-width: 1023px) {
+    .tracking-systems__cards {
+        margin-top: 64px;
+        padding: 0 16px 64px;
+        gap: 80px;
+        flex-direction: column;
+        align-items: center;
+    }
+}
