--- a/blocks/tracking-systems/__description-container/tracking-systems__description-container.css
+++ b/blocks/tracking-systems/__description-container/tracking-systems__description-container.css
@@ -4,3 +4,18 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 70px;
 }
+
+@media screen and (max-width: 1279px) {
+    .tracking-systems__description-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 24px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .tracking-systems__description-container {
+        box-sizing: border-box;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
