--- a/blocks/tracking-systems/__subtitle/tracking-systems__subtitle.css
+++ b/blocks/tracking-systems/__subtitle/tracking-systems__subtitle.css
@@ -7,3 +7,10 @@
     font-size: 20px;
     line-height: 1.4;
 }
+
+@media screen and (max-width: 767px) {
+    .tracking-systems__subtitle {
+        font-size: 12px;
+        line-height: 1.33;
+    }
+}
