--- a/blocks/form-footnote/form-footnote.css
+++ b/blocks/form-footnote/form-footnote.css
@@ -1,4 +1,4 @@
-.contacts__form-footnote {
+.form-footnote {
     width: 215px;
     margin: 0;
     padding-bottom: 4px;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 1279px) {
-    .contacts__form-footnote {
+    .form-footnote {
         width: 100%;;
     }
 }
