--- a/blocks/button-connect/button-connect.css
+++ b/blocks/button-connect/button-connect.css
@@ -2,8 +2,12 @@
     width: 206px;
     height: 48px;
     padding: 14px 20px;
-    box-sizing: border-box;
     border: 2px solid #1E74EC;
+    text-decoration: none;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
     font-family: 'Gotham';
     font-style: normal;
     font-weight: 500;
