--- a/blocks/button-read-more/button-read-more.css
+++ b/blocks/button-read-more/button-read-more.css
@@ -2,6 +2,11 @@
     width: 206px;
     height: 48px;
     padding: 14px 20px;
+    text-decoration: none;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
     font-family: 'Gotham';
     font-style: normal;
     font-weight: 500;
