--- a/blocks/button-vacancies/button-vacancies.css
+++ b/blocks/button-vacancies/button-vacancies.css
@@ -3,6 +3,11 @@
     height: 48px;
     padding: 14px 20px;
     border: 2px solid #1E74EC;
+    text-decoration: none;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
     font-family: 'Gotham';
     font-style: normal;
     font-weight: 500;
