--- a/blocks/business-card/__icon/business-card__icon.css
+++ b/blocks/business-card/__icon/business-card__icon.css
@@ -6,6 +6,10 @@
     right: 24px;
 }
 
+.business-card__icon:hover {
+    opacity: 0.5;
+}
+
 @media screen and (max-width: 767px) {
     .business-card__icon {
         top: 16px;
