--- a/blocks/button-connect/button-connect.css
+++ b/blocks/button-connect/button-connect.css
@@ -4,7 +4,7 @@
     padding: 14px 20px;
     border: 2px solid #1E74EC;
     text-decoration: none;
-    display: flex;
+    display: inline-flex;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
@@ -17,6 +17,16 @@
     color: #EEEFF1;
     background-color: #1E74EC;
     cursor: pointer;
+    transition: all 0.5s ease-in-out, transform 0s;
+}
+
+.button-connect:hover {
+    border: 1px solid white;
+    opacity: 0.6;
+}
+
+.button-connect:active {
+    transform: scale(1.1);
 }
 
 @media screen and (max-width: 1023px) {
