--- a/blocks/button-project-order/_place/button-project-order_place_portfolio.css
+++ b/blocks/button-project-order/_place/button-project-order_place_portfolio.css
@@ -1,3 +1,10 @@
 .button-project-order_place_portfolio {
     border-radius: 0;
+    transition: all 0.5s ease-in-out, transform 0s;
+}
+
+.button-project-order_place_portfolio:hover {
+    color: #1E74EC;
+    background: transparent;
+    border: 1px solid #1E74EC;
 }
