--- a/blocks/button-project-order/_place/button-project-order_place_projects-services.css
+++ b/blocks/button-project-order/_place/button-project-order_place_projects-services.css
@@ -15,5 +15,11 @@
         color: #1E74EC;
         font-family: 'Roboto';
         font-weight: 700;
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    .button-project-order_place_projects-services:hover {
+        opacity: 0.6;
+        border: none;
     }
 }
