--- a/blocks/button-project-order/button-project-order.css
+++ b/blocks/button-project-order/button-project-order.css
@@ -4,7 +4,7 @@
     padding: 14px 20px;
     background: #1E74EC;
     text-decoration: none;
-    display: flex;
+    display: inline-flex;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
@@ -16,6 +16,16 @@
     letter-spacing: 0.02em;
     color: #EEEFF1;
     cursor: pointer;
+    transition: border 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.button-project-order:hover {
+    border: 1px solid white;
+    opacity: 0.6;
+}
+
+.button-project-order:active {
+    transform: scale(1.1);
 }
 
 @media screen and (max-width: 1023px) {
