--- a/blocks/button-read-more/button-read-more.css
+++ b/blocks/button-read-more/button-read-more.css
@@ -3,7 +3,7 @@
     height: 48px;
     padding: 14px 20px;
     text-decoration: none;
-    display: flex;
+    display: inline-flex;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
@@ -16,6 +16,18 @@
     color: #EEEFF1;
     background-color: #1E74EC;
     cursor: pointer;
+    transition: all 0.5s ease-in-out, transform 0s;
+}
+
+.button-read-more:hover {
+    color: #1E74EC;
+    background: transparent;
+    border: 1px solid #1E74EC;
+    opacity: 0.6;
+}
+
+.button-read-more:active {
+    transform: scale(1.1);
 }
 
 @media  screen and (max-width: 767px) {
