--- a/blocks/clients/__item/clients__item.css
+++ b/blocks/clients/__item/clients__item.css
@@ -1,6 +1,15 @@
 .clients__item {
     margin: 0;
     padding: 0;
+    transition: all 0.5s ease-in-out, transform 0s;
+}
+
+.clients__item:hover {
+    opacity: 0.4;
+}
+
+.clients__item:active {
+    transform: scale(1.2);
 }
 
 @media screen and (max-width: 1279px) {
