--- a/blocks/services/__card-description-img/services__card-description-img.css
+++ b/blocks/services/__card-description-img/services__card-description-img.css
@@ -2,6 +2,11 @@
     width: 110px;
     height: 110px;
     border-radius: 16px;
+    transition: all 0.5s ease-in-out;
+}
+
+.services__card-description-img:hover {
+    opacity: 0.5;
 }
 
 @media screen and (max-width: 767px) {
