--- a/blocks/services/__card-description-offer-link/services__card-description-offer-link.css
+++ b/blocks/services/__card-description-offer-link/services__card-description-offer-link.css
@@ -10,6 +10,10 @@
     color: #A960AB;
 }
 
+.services__card-description-offer-link:hover {
+    opacity: 0.5;
+}
+
 @media screen and (max-width: 767px) {
     .services__card-description-offer-link {
         display: none;
