--- a/blocks/button-vroom/button-vroom.css
+++ b/blocks/button-vroom/button-vroom.css
@@ -17,11 +17,12 @@
     letter-spacing: 0.02em;
     color: #EEEFF1;
     cursor: pointer;
-    transition: border 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out, transform 0s;
 }
 
 .button-vroom:hover {
-    border: 1px solid black;
+    border: 1px solid white;
+    opacity: 0.6;
 }
 
 .button-vroom:active {
