--- a/blocks/page-header/__description/page-header__description.css
+++ b/blocks/page-header/__description/page-header__description.css
@@ -1,7 +1,7 @@
 .page-header__description {
     margin: 0;
     padding: 0;
-    font-family: 'Rubik';
+    font-family: 'Gotham';
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
